# openpi-flash

./: .env.example  .gitignore  .hadolint.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.final  Dockerfile.vlash  LICENSE  README.md  compose.yml  config.combined.example.json  config.example.json  config.example.planner.json  config.planner_only.example.json  config.vlash.example.json  convert_checkpoint_modal.py  main.py  modal_app.py  modal_quic_app.py  modal_tunnel_app.py  pyproject.toml  test_modal.py  test_modal_quic.py  test_modal_tunnel.py  test_quic.py  test_server.py
.github/workflows/: docker-build.yml
docs/: arrow-wire.md  aws-manual-setup.md
examples/galaxea/: README.md  _common.py  embodiment_mappings.py  galaxea_client.py
examples/galaxea/tests/: conftest.py  test_r1_lite_mappings.py  test_r1_pro_mappings.py
examples/galaxea_r1_pro/: README.md  galaxea_r1_pro_client.py  r1_pro_embodiment_mappings.py
examples/shared/: mappings.py  types.py
examples/yor/: README.md  yor_client.py
examples/yor/tests/: conftest.py  test_yor_mappings.py
experiments/bimanual_sim/: .gitignore  README.md  arm_handles.py  cameras.py  ik.py  paths.py  phase_guard.py  phase_monitor.py  pyproject.toml  rerun_stream.py  runner.py  scene_base.py  scene_check.py  serve.sh  teleop.py  viser_render.py  welds.py
experiments/bimanual_sim/assets/: mobile_aloha_stanford.stl
experiments/bimanual_sim/assets/mobile_aloha/: aloha_body_no_arms.stl
experiments/bimanual_sim/robots/: __init__.py  mobile_aloha.py  piper.py  tiago.py  ur10e.py
experiments/bimanual_sim/scenes/: data_center.py  data_center_layout.py  data_center_tiago.py  data_center_tiago_layout.py  mobile_aloha_piper_indicator_check.py  mobile_aloha_piper_indicator_check_layout.py  mobile_aloha_ur10e_server_swap.py  mobile_aloha_ur10e_server_swap_layout.py  tiago_piper_server_cable_swap.py  tiago_piper_server_cable_swap_layout.py
experiments/bimanual_sim/tests/: test_observability_helpers.py  test_phase_contracts_structural.py  test_scene_check_helpers.py
experiments/bimanual_sim/tools/: _runtime.py  inspect_aloha_body.py  label_aloha_arms.py  mj.py  observability.py  render_pov_videos.py  strip_aloha_arms.py
experiments/subtask_probe/: FINDINGS.md  decode_jax.py  dual_runtime_benchmark.py
experiments/subtask_probe/droid_eval/: README.md  compute_metrics.py  constants.py  extract_droid_samples.py  generate_subtasks.py  generate_subtasks_gemini.py  run_action_eval.py  utils.py  visualize_results.py  visualize_subtasks.py
experiments/subtask_probe/droid_eval/comet_style/: __init__.py  _gemini_utils.py  gemini_reasoner.py  openai_compat_reasoner.py  reasoner_base.py  run.py
experiments/subtask_probe/droid_eval/foreact_eval/: README.md  __init__.py  _io.py  generate_foresight.py  generate_foresight_lerobot.py  generate_foresight_nano_banana.py  generate_subtasks.py  generate_subtasks_v2chain.py  planner.py  visualize_foreact.py  visualize_nano_banana.py
experiments/transport_bench/: benchmark.py  run_matrix.sh
flash-transport/: Cargo.toml  README.md
flash-transport/src/: arrow_codec.rs  chunk_cache.rs  image_preprocess.rs  lib.rs  local_format.rs  main.rs  metadata.rs
infra/: .gitignore  README.md  ecr.tf  iam.tf  main.tf  outputs.tf  s3.tf  variables.tf
infra/modules/regional_inference_instance/: main.tf  outputs.tf  variables.tf
infra/modules/regional_inference_instance/templates/: user_data.sh.tftpl  user_data.yaml.tftpl
infra/regional-instance/: README.md  main.tf  outputs.tf  variables.tf
quic-sidecar/: Cargo.toml
quic-sidecar/src/: main.rs
references/: modal-memory-snapshots.md  modal-tunnels.md  physical-intelligence-modal.md
scripts/: check.sh
src/hosting/: admin_server.py  auth.py  benchmark.py  compile_mode.py  config.py  direct_quic_client_policy.py  flash_transport_binary.py  flash_transport_policy.py  local_frame.py  local_policy_socket_server.py  local_sidecar_protocol.py  local_transport_protocol.py  modal_asgi.py  modal_dict_names.py  modal_helpers.py  prepare_checkpoint.py  prepare_planner_checkpoint.py  quic_client_policy.py  quic_protocol.py  quic_server.py  relay.py  serve.py  serve_vlash.py  subtask_generator.py  subtask_policy.py  vlash_config.py  vlash_server.py  warmup.py
tests/: helpers.py  test_arrow_wire.py  test_flash_transport_cli_drift.py  test_local_frame.py  test_metadata_python_emit.py  test_modal_quic.py  test_quic.py  test_tunnel.py  test_warmup.py  test_ws.py
