[project]
name = "openpi-hosting"
version = "0.1.0"
description = "Hosted inference service for openpi"
requires-python = ">=3.11,<3.13"
dependencies = [
    "openpi",
    "openpi-client",
    "pydantic>=2.12.5",
    "modal>=1.4.1",
    "starlette>=1.0.0",
    "gsutil>=5.36",
    "quic-portal>=0.1.0",
]

[tool.uv]
override-dependencies = [
    "jax[cuda12]==0.5.3; sys_platform == 'linux'",
    "jax==0.5.3; sys_platform != 'linux'",
]

[tool.uv.sources]
openpi = { path = "../openpi", editable = true }
openpi-client = { path = "../openpi/packages/openpi-client", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.9", # 
    "ty>=0.0.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hosting"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ANN",
    "PTH",
    "RET",
    "SIM",
    "TID",
    "RUF",
]
ignore = ["E501", "B008", "C901", "RET504", "ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.rules]
division-by-zero = "error"
deprecated = "error"
unused-ignore-comment = "error"
possibly-unresolved-reference = "error"

[tool.ty.src]
# test_modal.py uses runtime sys.path manipulation that ty cannot resolve.
exclude = ["test_modal.py", "test_modal_tunnel.py", "test_modal_quic.py"]

[tool.ty.environment]
# vlash is not installed in the hosting venv — it's added via PYTHONPATH
# in the Docker container. Point ty at it so it can resolve vlash.* imports.
extra-paths = ["../vlash"]
