[project]
name = "openpi-flash"
version = "0.1.0"
description = "Real-time inference engine for openpi"
license = { file = "LICENSE" }
authors = [{ name = "Hebbian Robotics" }]
requires-python = ">=3.11,<3.13"
dependencies = [
    "openpi",
    "openpi-client",
    "huggingface-hub>=0.36.2,<1.0",
    "pydantic>=2.13.0",
    "modal>=1.4.1",
    "pytest>=9.0.3",
    "s3fs>=2026.2.0,<2026.3.0",
    "starlette>=1.0.0",
    "gsutil>=5.36",
    "quic-portal>=0.1.13",
    "python-dotenv>=1.2.2",
    "typer>=0.24.1",
]

[tool.uv]
override-dependencies = [
    "jax[cuda12]==0.5.3; sys_platform == 'linux'",
    "jax==0.5.3; sys_platform != 'linux'",
]

[tool.uv.sources]
openpi = { path = "../openpi", editable = true }
openpi-client = { path = "../openpi/packages/openpi-client", editable = true }
quic-portal = { git = "https://github.com/Hebbian-Robotics/quic-portal.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.10", #
    "ty>=0.0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hosting"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ANN",
    "PTH",
    "RET",
    "SIM",
    "TID",
    "RUF",
]
ignore = ["E501", "B008", "C901", "RET504", "ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.rules]
division-by-zero = "error"
deprecated = "error"
unused-ignore-comment = "error"
possibly-unresolved-reference = "error"

[tool.ty.src]
# Test scripts import from openpi which is a sibling-repo editable dependency.
exclude = ["tests/"]
