[package]
name = "openpi-flash-transport"
version = "0.1.0"
edition = "2021"
description = "Transport layer (QUIC + Arrow IPC + preprocessing) for openpi-flash"
license = "MIT"
authors = ["Hebbian Robotics"]

[lib]
name = "openpi_flash_transport"
path = "src/lib.rs"

[[bin]]
name = "openpi-flash-transport"
path = "src/main.rs"

[[bin]]
name = "openpi-arrow-wire-echo"
path = "src/bin/arrow_wire_echo.rs"
doc = false

[[bin]]
name = "openpi-metadata-echo"
path = "src/bin/metadata_echo.rs"
doc = false

[dependencies]
anyhow = "1.0.102"
arrow-array = "58.1.0"
arrow-buffer = "58.1.0"
arrow-data = "58.1.0"
arrow-ipc = "58.1.0"
arrow-schema = "58.1.0"
byteorder = "1.5.0"
clap = { version = "4.6.1", features = ["derive"] }
fast_image_resize = "6.0.0"
ndarray = "0.17.2"
quinn = "0.11.9"
rcgen = "0.14.7"
rmp-serde = "1.3.1"
rustls = { version = "0.23.38", features = ["ring"] }
rustls-pki-types = "1.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"
missing_panics_doc = "allow"
unnecessary_wraps = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
