[package]
name = "openpi-quic-sidecar"
version = "0.1.0"
edition = "2021"
description = "Rust QUIC transport sidecar for openpi-flash"
license = "MIT"
authors = ["Hebbian Robotics"]

[[bin]]
name = "openpi-quic-sidecar"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
quinn = "0.11.9"
rcgen = "0.14.7"
rustls = { version = "0.23.37", features = ["ring"] }
rustls-pki-types = "1.14.0"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
needless_pass_by_value = "allow"
missing_panics_doc = "allow"
unnecessary_wraps = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
